force-app/main/default/objects/Zco_Clinical_Threshold__mdt/Zco_Clinical_Threshold__mdt.object-meta.xml
<CustomObject>
<label>Zco Clinical Threshold</label>
<pluralLabel>Zco Clinical Thresholds</pluralLabel>
</CustomObject>