force-app/main/default/objects/Zco_Clinical_Threshold__mdt/fields/Action__c.field-meta.xml
<CustomField>
<fullName>Action__c</fullName>
<label>Action</label>
<type>Picklist</type>
<required>true</required>
<valueSet>
<valueSetDefinition>
<value>
<fullName>Safety case</fullName>
</value>
<value>
<fullName>Care task</fullName>
</value>
<value>
<fullName>Priority call</fullName>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>