force-app/main/default/objects/Zco_Clinical_Threshold__mdt/fields/Applies_To_Source__c.field-meta.xml
<CustomField>
<fullName>Applies_To_Source__c</fullName>
<label>Applies To Source</label>
<type>Picklist</type>
<required>true</required>
<valueSet>
<valueSetDefinition>
<value>
<fullName>All</fullName>
</value>
<value>
<fullName>Patient-reported</fullName>
</value>
<value>
<fullName>FHIR</fullName>
</value>
</valueSetDefinition>
</valueSet>
</CustomField>