force-app/main/default/objects/Zco_Clinical_Threshold__mdt/fields/High__c.field-meta.xml
<CustomField>
    <fullName>High__c</fullName>
    <label>High</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>