force-app/main/default/objects/Zco_Clinical_Threshold__mdt/fields/Low__c.field-meta.xml
<CustomField>
<fullName>Low__c</fullName>
<label>Low</label>
<type>Number</type>
<precision>18</precision>
<scale>4</scale>
</CustomField>