force-app/main/default/objects/Zco_Clinical_Threshold__mdt/fields/Observation_Type__c.field-meta.xml
<CustomField>
<fullName>Observation_Type__c</fullName>
<label>Observation Type</label>
<type>Text</type>
<required>true</required>
<length>255</length>
</CustomField>