force-app/main/default/objects/Zco_Clinical_Threshold__mdt/fields/Unit__c.field-meta.xml
<CustomField>
<fullName>Unit__c</fullName>
<label>Unit</label>
<type>Text</type>
<length>255</length>
</CustomField>